@@ -1468,7 +1468,20 @@ class _ExpectedSkips:
         assert self.isvalid()
         return self.expected
 
+
 if __name__ == '__main__':
+    # Remove regrtest.py's own directory from the module search path. Despite
+    # the elimination of implicit relative imports, this is still needed to
+    # ensure that submodules of the test package do not inappropriately appear
+    # as top-level modules even when people (or buildbots!) invoke regrtest.py
+    # directly instead of using the -m switch
+    mydir = os.path.abspath(os.path.normpath(os.path.dirname(sys.argv[0])))
+    i = len(sys.path)
+    while i >= 0:
+        i -= 1
+        if os.path.abspath(os.path.normpath(sys.path[i])) == mydir:
+            del sys.path[i]
+
     # findtestdir() gets the dirname out of __file__, so we have to make it
     # absolute before changing the working directory.
     # For example __file__ may be relative when running trace or profile.
